--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 <body>
     <nav>
         <a href="{{ url_for('get_all_rooms') }}">Rooms</a>
-        <a href="#">About</a>
+        <a href="{{ url_for('get_all_items') }}">Items</a>
     </nav>
     <hr>
     <div class="content">
