--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
     <nav>
         <a href="{{ url_for('get_all_rooms') }}">Rooms</a>
         <a href="{{ url_for('get_all_items') }}">Items</a>
+        <a href="{{ url_for('get_all_persons') }}">Persons</a>
     </nav>
     <hr>
     <div class="content">
