--- a/templates/item.html
+++ b/templates/item.html
@@ -5,7 +5,7 @@
     {% for item in items %}
         <div class='element'>
             <h3>ID #{{ item[0] }}: {{ item[2] }}</h3>
-            <p class='review'>Found in room {{ item[1] }}</p>
+            <p class='review'><i>Found in {{ item[1] }}</i></p>
             <p class='review'>{{ item[3] }}</p>
         </div>
     {% endfor %}
