--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
         <a href="{{ url_for('get_all_rooms') }}">Rooms</a>
         <a href="{{ url_for('get_all_items') }}">Items</a>
         <a href="{{ url_for('get_all_persons') }}">Persons</a>
+        <a href="{{ url_for('get_all_objectives') }}">Objectives</a>
     </nav>
     <hr>
     <div class="content">
