--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
         <a href="{{ url_for('get_all_items') }}">Items</a>
         <a href="{{ url_for('get_all_persons') }}">Persons</a>
         <a href="{{ url_for('get_all_objectives') }}">Objectives</a>
+        <a href="{{ url_for('get_all_junctions') }}">Junctions</a>
     </nav>
     <hr>
     <div class="content">
