New DB structure

--- a/templates/item.html
+++ b/templates/item.html
@@ -4,9 +4,9 @@
     <h1>{% block title %} Items {% endblock %}</h1>
     {% for item in items %}
         <div class='element'>
-            <a href="{{ url_for('get_single_item', num=item[0])}}"><h3>ID #{{ item[0] }}: {{ item[2] }}</h3></a>
-            <p class='review'><i>Found in {{ item[1] }}</i></p>
-            <p class='review'>{{ item[3] }}</p>
+            <a href="{{ url_for('get_single_item', num=item[0])}}"><h3>ID #{{ item[0] }}: {{ item[3] }}</h3></a>
+            <p class='review'><i>Found in <a href="{{ url_for('get_single_room', num=item[1])}}">Room ID #{{ item[1] }}</a></i></p>
+            <p class='review'>{{ item[4] }}</p>
         </div>
     {% endfor %}
 {% endblock %}
