--- a/templates/person.html
+++ b/templates/person.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 
+{% block script %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/simple.css">
+{% endblock %}
+
 {% block content %}
     <h1>{% block title %} Persons {% endblock %}</h1>
     {% for person in persons %}
-        <div class='element'>
-            <a href="{{ url_for('get_single_person', num=person[0])}}"><h3>ID #{{ person[0] }}: {{ person[3] }}</h3></a>
-            <p class='review'><i>Found in <a href="{{ url_for('get_single_room', num=person[1])}}">Room ID #{{ person[1] }}</a></i></p>
-            <p class='review'>{{ person[4] }}</p>
-        </div>
+        <p><a href="{{ url_for('get_single_person', num=person[0])}}"><h3>ID #{{ person[0] }}: {{ person[3] }}</h3></a></p>
+        <p><i>Found in <a href="{{ url_for('get_single_room', num=person[1])}}">Room ID #{{ person[1] }}</a></i></p>
+        <p>{{ person[4] }}</p>
     {% endfor %}
 {% endblock %}
