--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block script %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/simple.css">
+<link rel="stylesheet" href="/static/simple.css">
 {% endblock %}
 
 {% block content %}
