--- a/templates/solution.html
+++ b/templates/solution.html
@@ -2,7 +2,7 @@
 
 {% block script %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/simple-red.css">
+<link rel="stylesheet" href="/static/simple-red.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
 <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 {% endblock %}
