--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
     <a href="{{ url_for('get_all_persons') }}">Persons</a>
     <a href="{{ url_for('get_all_objectives') }}">Objectives</a>
     <a href="{{ url_for('get_all_junctions') }}">Junctions</a>
+
+    <a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>
   </nav>
 
   <main>
