--- a/templates/objective.html
+++ b/templates/objective.html
@@ -15,6 +15,15 @@
         <p>URL: {{ objective[6] }}</p>
         <p>Supported by: {{ objective[7] }}</p>
         <p>Requires: {{ objective[8] }}</p>
-        <p><a href="{{ url_for('get_single_quest', num=objective[0])}}">Edit Quest</a><a href="{{ url_for('get_single_solution', num=objective[0])}}">Edit Solution</a></p>
+        <p>
+            <form action="{{ url_for('get_single_quest', num=objective[0])}}">
+                <input type="submit" value="Edit Quest" />
+            </form>
+        </p>
+        <p>
+            <form action="{{ url_for('get_single_solution', num=objective[0])}}">
+                <input type="submit" value="Edit Solution" />
+            </form>
+        </p>
     {% endfor %}
 {% endblock %}
