--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -9,6 +9,8 @@
     <h1>{% block title %} Items {% endblock %}</h1>
     {% for item in items %}
         <p><a href="{{ url_for('get_single_item', num=item[0])}}"><h3>ID #{{ item[0] }}: {{ item[3] }}</h3></a></p>
+        <p><i>Found in <a href="{{ url_for('get_single_room', num=item[1])}}">Room ID #{{ item[1] }}</a></i></p>
+        <p>{{ item[4] }}</p>
     {% endfor %}
-    <a href="{{ url_for('get_my_index') }}">Index</a>
+    <p><a href="{{ url_for('get_all_items') }}">All Items</a></p>
 {% endblock %}
