--- a/templates/junction_detail.html
+++ b/templates/junction_detail.html
@@ -9,6 +9,9 @@
     <h1>{% block title %} Junctions {% endblock %}</h1>
     {% for junction in junctions %}
         <p><a href="{{ url_for('get_single_junction', num=junction[0])}}"><h3>ID #{{ junction[0] }}</h3></a></p>
+        <p><i>Found in <a href="{{ url_for('get_single_room', num=junction[1])}}">Room ID #{{ junction[1] }}</a></i></p>
+        <p><i>Targeting <a href="{{ url_for('get_single_room', num=junction[3])}}">Room ID #{{ junction[3] }}</a></i></p>
+        <p>{{ junction[4] }}</p>
     {% endfor %}
-    <a href="{{ url_for('get_my_index') }}">Index</a>
+    <p><a href="{{ url_for('get_all_junctions') }}">All Junctions</a></p>
 {% endblock %}
