--- a/templates/quest.html
+++ b/templates/quest.html
@@ -1,11 +1,4 @@
-{% extends 'base.html' %}
-
-{% block script %}
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/static/simple-red.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
-<script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
-{% endblock %}
+{% extends 'base_editor.html' %}
 
 {% block content %}
     <h1>{% block title %} Quest {% endblock %}</h1>
