--- a/templates/base_editor.html
+++ b/templates/base_editor.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Kringle Web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/simple.css">
+    <link rel="stylesheet" href="/static/simple-red.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 </head>
 <body>
   <header>
