--- a/static/simple.css
+++ b/static/simple.css
@@ -53,7 +53,7 @@ body {
   line-height: 1.5;
   display: grid;
   grid-template-columns:
-    1fr min(45rem, 90%) 1fr;
+    1fr 85% 1fr;
   margin: 0;
 }
 
