--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
   <div id="pagestart"></div>
 
   <nav>
+    <a href="{{ url_for('get_all_creators') }}">Creators</a>
+    <a href="{{ url_for('get_all_worlds') }}">Worlds</a>
     <a href="{{ url_for('get_all_rooms') }}">Rooms</a>
     <a href="{{ url_for('get_all_items') }}">Items</a>
     <a href="{{ url_for('get_all_persons') }}">Persons</a>
