--- a/templates/junction_detail.html
+++ b/templates/junction_detail.html
@@ -6,7 +6,7 @@
         <p><a href="{{ url_for('get_single_junction', num=junction[0])}}"><h3>ID #{{ junction[0] }}</h3></a></p>
         <p><i>Found in <a href="{{ url_for('get_single_room', num=junction[1])}}">Room ID #{{ junction[1] }}</a></i></p>
         <p><i>Targeting <a href="{{ url_for('get_single_room', num=junction[3])}}">Room ID #{{ junction[3] }}</a></i></p>
-        <p>{{ junction[4] }}</p>
+        <p>Description: {{ junction[4] }}</p>
     {% endfor %}
     <p><a href="{{ url_for('get_all_junctions') }}">All Junctions</a></p>
 {% endblock %}
