--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
   </main>
 
   <footer>
+    <p>Logged in as {{ request.authorization.get('username') if (request.authorization != None)  }} </p>
+    <p><a href="{{ url_for('get_my_login') }}">Log in</a></p>
     <p><a href="#pagestart">Go to top of page</a></p>
   </footer>
 </body>
