--- a/templates/creator.html
+++ b/templates/creator.html
@@ -2,6 +2,14 @@
 
 {% block content %}
     <h1>{% block title %} Creators {% endblock %}</h1>
+
+    <h5>Create a new creator:</h5>
+    <form action="{{ url_for('get_new_creator') }}" method="POST">
+        Name: <input type="text" name="creator" size="20" maxlength="20" minlength="5"><br>
+        Password: <input type="password" name="password" size="20" maxlength="20" minlength="5"><br>
+        <input type="submit">
+    </form>
+
     {% for creator in creators %}
         <p><a href="{{ url_for('get_single_creator', num=creator[0])}}"><h3>ID #{{ creator[0] }}: {{ creator[1] }}</h3></a></p>
     {% endfor %}
