World selection preparation

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,7 @@
   <div id="pagestart"></div>
 
   <nav>
-    <a href="{{ url_for('get_all_creators') }}">Creators</a>
-    <a href="{{ url_for('get_all_worlds') }}">Worlds</a>
+    <a href="{{ url_for('get_my_index') }}"><i>Back</i></a>
     <a href="{{ url_for('get_all_rooms') }}">Rooms</a>
     <a href="{{ url_for('get_all_items') }}">Items</a>
     <a href="{{ url_for('get_all_persons') }}">Persons</a>
