--- a/templates/base_init.html
+++ b/templates/base_init.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>Kringle Web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/simple-red.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
+    <link rel="stylesheet" href="/static/simple.css">
 </head>
 <body>
   <header>
@@ -17,12 +15,9 @@
   <div id="pagestart"></div>
 
   <nav>
-    <a href="{{ url_for('get_my_index') }}"><i>Back</i></a>
-    <a href="{{ url_for('get_all_rooms') }}">Rooms</a>
-    <a href="{{ url_for('get_all_items') }}">Items</a>
-    <a href="{{ url_for('get_all_persons') }}">Persons</a>
-    <a href="{{ url_for('get_all_objectives') }}">Objectives</a>
-    <a href="{{ url_for('get_all_junctions') }}">Junctions</a>
+    <a href="{{ url_for('get_all_creators') }}">Creators</a>
+    <a href="{{ url_for('get_new_creator') }}">New Creator</a>
+    <a href="{{ url_for('get_all_worlds') }}">Worlds</a>
 
     <a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>
   </nav>
