--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_init.html' %}
 
 {% block content %}
     <h1>{% block title %} Index {% endblock %}</h1>
