World selection preparation

--- a/templates/creator_new.html
+++ b/templates/creator_new.html
@@ -1,7 +1,7 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} Creators {% endblock %}</h1>
+    <h1>{% block title %} New Creator {% endblock %}</h1>
 
     <h5>Create a new creator:</h5>
     <form action="{{ url_for('post_new_creator') }}" method="POST">
