--- a/templates/creator.html
+++ b/templates/creator.html
@@ -1,10 +1,11 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} Creators {% endblock %}</h1>
+    <h1>{% block title %} All Creators {% endblock %}</h1>
 
     {% for creator in creators %}
         <p><a href="{{ url_for('get_single_creator', num=creator[0])}}"><h3>ID #{{ creator[0] }}: {{ creator[1] }}</h3></a></p>
     {% endfor %}
+    
     <a href="{{ url_for('get_my_index') }}">Index</a>
 {% endblock %}
