--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -1,11 +1,11 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} Creators {% endblock %}</h1>
-    {% for creator in creators %}
-        <p><a href="{{ url_for('get_single_creator', num=creator[0])}}"><h3>ID #{{ creator[0] }}: {{ creator[1] }}</h3></a></p>
-        <p>Pass: {{ creator[2] }}</p>
-        <p>Hash: {{ creator[3] }}</p>
-    {% endfor %}
+    <h1>{% block title %} Single Creator {% endblock %}</h1>
+
+    <p><a href="{{ url_for('get_single_creator', num=creator[0])}}"><h3>ID #{{ creator[0] }}: {{ creator[1] }}</h3></a></p>
+    <p>Pass: {{ creator[2] }}</p>
+    <p>Hash: {{ creator[3] }}</p>
+
     <p><a href="{{ url_for('get_all_creators') }}">All Creators</a></p>
 {% endblock %}
