--- a/templates/world.html
+++ b/templates/world.html
@@ -1,9 +1,11 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} Worlds {% endblock %}</h1>
+    <h1>{% block title %} All Worlds {% endblock %}</h1>
+
     {% for world in worlds %}
         <p><a href="{{ url_for('get_single_world', num=world[0])}}"><h3>ID #{{ world[0] }}: {{ world[2] }}</h3></a></p>
     {% endfor %}
+    
     <a href="{{ url_for('get_my_index') }}">Index</a>
 {% endblock %}
