--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -1,11 +1,11 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} Worlds {% endblock %}</h1>
-    {% for world in worlds %}
-        <p><a href="{{ url_for('get_single_world', num=world[0])}}"><h3>ID #{{ world[0] }}: {{ world[2] }}</h3></a></p>
-        <p>Descrription: {{ world[3] }}</p>
-        <p>URL: {{ world[4] }}</p>
-    {% endfor %}
+    <h1>{% block title %} Single World {% endblock %}</h1>
+
+    <p><a href="{{ url_for('get_single_world', num=world[0])}}"><h3>ID #{{ world[0] }}: {{ world[2] }}</h3></a></p>
+    <p>Description: {{ world[3] }}</p>
+    <p>URL: {{ world[4] }}</p>
+
     <p><a href="{{ url_for('get_all_worlds') }}">All Worlds</a></p>
 {% endblock %}
