--- a/templates/objective.html
+++ b/templates/objective.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
+{% block links %}
+    <a href="{{ url_for('get_all_rooms', num=world_id) }}">Rooms</a>
+    <a href="{{ url_for('get_all_items', num=world_id) }}">Items</a>
+    <a href="{{ url_for('get_all_persons', num=world_id) }}">Persons</a>
+    <a href="{{ url_for('get_all_objectives', num=world_id ) }}">Objectives</a>
+    <a href="{{ url_for('get_all_junctions', num=world_id) }}">Junctions</a>
+{% endblock %}
 
 {% block content %}
-    <h1>{% block title %} Objectives {% endblock %}</h1>
+    <h1>{% block title %} All Objectives {% endblock %}</h1>
+
     {% for objective in objectives %}
         <p><a href="{{ url_for('get_single_objective', num=objective[0])}}"><h3>ID #{{ objective[0] }}: {{ objective[3] }}</h3></a></p>
     {% endfor %}
+
     <a href="{{ url_for('get_my_index') }}">Index</a>
 {% endblock %}
