--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -1,25 +1,33 @@
 {% extends 'base.html' %}
 
+{% block links %}
+    <a href="{{ url_for('get_all_rooms', num=objective[2]) }}">Rooms</a>
+    <a href="{{ url_for('get_all_items', num=objective[2]) }}">Items</a>
+    <a href="{{ url_for('get_all_persons', num=objective[2]) }}">Persons</a>
+    <a href="{{ url_for('get_all_objectives', num=objective[2] ) }}">Objectives</a>
+    <a href="{{ url_for('get_all_junctions', num=objective[2]) }}">Junctions</a>
+{% endblock %}
+
 {% block content %}
-    <h1>{% block title %} Objectives {% endblock %}</h1>
-    {% for objective in objectives %}
-        <p><a href="{{ url_for('get_single_objective', num=objective[0])}}"><h3>ID #{{ objective[0] }}: {{ objective[3] }}</h3></a></p>
-        <p><i>Found in <a href="{{ url_for('get_single_room', num=objective[1])}}">Room ID #{{ objective[1] }}</a></i></p>
-        <p>{{ objective[4] }}</p>
-        <p>Difficulty: {{ objective[5] }}</p>
-        <p>URL: {{ objective[6] }}</p>
-        <p>Supported by: {{ objective[7] }}</p>
-        <p>Requires: {{ objective[8] }}</p>
-        <p>
-            <form action="{{ url_for('get_single_quest', num=objective[0])}}">
-                <input type="submit" value="Edit Quest" />
-            </form>
-        </p>
-        <p>
-            <form action="{{ url_for('get_single_solution', num=objective[0])}}">
-                <input type="submit" value="Edit Solution" />
-            </form>
-        </p>
-    {% endfor %}
-    <p><a href="{{ url_for('get_all_objectives') }}">All Objectives</a></p>
+    <h1>{% block title %} Single Objective {% endblock %}</h1>
+
+    <p><a href="{{ url_for('get_single_objective', num=objective[0])}}"><h3>ID #{{ objective[0] }}: {{ objective[3] }}</h3></a></p>
+    <p><i>Found in <a href="{{ url_for('get_single_room', num=objective[1])}}">Room ID #{{ objective[1] }}</a></i></p>
+    <p>{{ objective[4] }}</p>
+    <p>Difficulty: {{ objective[5] }}</p>
+    <p>URL: {{ objective[6] }}</p>
+    <p>Supported by: {{ objective[7] }}</p>
+    <p>Requires: {{ objective[8] }}</p>
+    <p>
+        <form action="{{ url_for('get_single_quest', num=objective[0])}}">
+            <input type="submit" value="Edit Quest" />
+        </form>
+    </p>
+    <p>
+        <form action="{{ url_for('get_single_solution', num=objective[0])}}">
+            <input type="submit" value="Edit Solution" />
+        </form>
+    </p>
+
+    <p><a href="{{ url_for('get_all_objectives', num=objective[2]) }}">All Objectives</a></p>
 {% endblock %}
