--- a/templates/person.html
+++ b/templates/person.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
 
+{% block links %}
+    <a href="{{ url_for('get_all_rooms', num=world_id) }}">Rooms</a>
+    <a href="{{ url_for('get_all_items', num=world_id) }}">Items</a>
+    <a href="{{ url_for('get_all_persons', num=world_id) }}">Persons</a>
+    <a href="{{ url_for('get_all_objectives', num=world_id ) }}">Objectives</a>
+    <a href="{{ url_for('get_all_junctions', num=world_id) }}">Junctions</a>
+{% endblock %}
+
 {% block content %}
-    <h1>{% block title %} Persons {% endblock %}</h1>
+    <h1>{% block title %} All Persons {% endblock %}</h1>
+
     {% for person in persons %}
         <p><a href="{{ url_for('get_single_person', num=person[0])}}"><h3>ID #{{ person[0] }}: {{ person[3] }}</h3></a></p>
     {% endfor %}
+
     <a href="{{ url_for('get_my_index') }}">Index</a>
 {% endblock %}
