--- a/templates/person_detail.html
+++ b/templates/person_detail.html
@@ -1,11 +1,19 @@
 {% extends 'base.html' %}
 
+{% block links %}
+    <a href="{{ url_for('get_all_rooms', num=person[2]) }}">Rooms</a>
+    <a href="{{ url_for('get_all_items', num=person[2]) }}">Items</a>
+    <a href="{{ url_for('get_all_persons', num=person[2]) }}">Persons</a>
+    <a href="{{ url_for('get_all_objectives', num=person[2] ) }}">Objectives</a>
+    <a href="{{ url_for('get_all_junctions', num=person[2]) }}">Junctions</a>
+{% endblock %}
+
 {% block content %}
-    <h1>{% block title %} Persons {% endblock %}</h1>
-    {% for person in persons %}
-        <p><a href="{{ url_for('get_single_person', num=person[0])}}"><h3>ID #{{ person[0] }}: {{ person[3] }}</h3></a></p>
-        <p><i>Found in <a href="{{ url_for('get_single_room', num=person[1])}}">Room ID #{{ person[1] }}</a></i></p>
-        <p>Description: {{ person[4] }}</p>
-    {% endfor %}
-    <p><a href="{{ url_for('get_all_persons') }}">All Persons</a></p>
+    <h1>{% block title %} Single Person {% endblock %}</h1>
+    
+    <p><a href="{{ url_for('get_single_person', num=person[0])}}"><h3>ID #{{ person[0] }}: {{ person[3] }}</h3></a></p>
+    <p><i>Found in <a href="{{ url_for('get_single_room', num=person[1])}}">Room ID #{{ person[1] }}</a></i></p>
+    <p>Description: {{ person[4] }}</p>
+
+    <p><a href="{{ url_for('get_all_persons', num=person[2]) }}">All Persons</a></p>
 {% endblock %}
