World selection finished

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kringle Web</title>
+    <title>Kringle Web - {% block title %} {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/simple.css">
 </head>
 <body>
   <header>
     <h1>Kringle Web</h1>
-    <p>{% block title %} {% endblock %}</p>
+    <p>Rooms and Objectives</p>
   </header>
 
   <div id="pagestart"></div>
