--- a/templates/base_editor.html
+++ b/templates/base_editor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kringle Web</title>
+    <title>Kringle Web - {% block title %} {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/simple-red.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Kringle Web</h1>
-    <p>{% block title %} {% endblock %}</p>
+    <p>Quests and Solutions</p>
   </header>
 
   <div id="pagestart"></div>
