--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -4,8 +4,7 @@
     <h1>{% block title %} Single Creator {% endblock %}</h1>
 
     <p><a href="{{ url_for('get_single_creator', num=creator[0])}}"><h3>ID #{{ creator[0] }}: {{ creator[1] }}</h3></a></p>
-    <p>Pass: {{ creator[2] }}</p>
-    <p>Hash: {{ creator[3] }}</p>
+    <p>Role: {{ creator[4] }}</p>
 
     <p><a href="{{ url_for('get_all_creators') }}">All Creators</a></p>
 {% endblock %}
