--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -13,7 +13,7 @@
 
     <p><a href="{{ url_for('get_single_objective', num=objective[0])}}"><h3>ID #{{ objective[0] }}: {{ objective[3] }}</h3></a></p>
     <p><i>Found in <a href="{{ url_for('get_single_room', num=objective[1])}}">Room ID #{{ objective[1] }}</a></i></p>
-    <p>{{ objective[4] }}</p>
+    <p>Description: {{ objective[4] }}</p>
     <p>Difficulty: {{ objective[5] }}</p>
     <p>URL: {{ objective[6] }}</p>
     <p>Supported by: {{ objective[7] }}</p>
