--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -12,6 +12,7 @@
     <h1>{% block title %} Single Room {% endblock %}</h1>
         
     <p><a href="{{ url_for('get_single_room', num=room[0])}}"><h3>ID #{{ room[0] }}: {{ room[2] }}</h3></a></p>
+    <p><i>Found in <a href="{{ url_for('get_single_world', num=room[1])}}">World ID #{{ room[1] }}</a></i></p>
     <p>Description: {{ room[3] }}</p>
 
     <p><a href="{{ url_for('get_all_rooms', num=room[1]) }}">All Rooms</a></p>
