--- a/templates/solution_detail.html
+++ b/templates/solution_detail.html
@@ -16,7 +16,7 @@
         <script>
             const easyMDE = new EasyMDE();
         </script>
-        <input type="submit">
+        <input type="submit" value="Submit">
     </form>
 
 {% endblock %}
