--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -4,11 +4,12 @@
     <h1>{% block title %} Single World {% endblock %}</h1>
 
     <p><a href="{{ url_for('get_single_world', num=world[0])}}"><h3>ID #{{ world[0] }}: {{ world[2] }}</h3></a></p>
+    <p><i>Created by <a href="{{ url_for('get_single_creator', num=world[1])}}">Creator ID #{{ world[1] }}</a></i></p>
     <p>Description: {{ world[3] }}</p>
     <p>URL: {{ world[4] }}</p>
 
     <form action="{{ url_for('get_all_rooms', num=world[0]) }}" method="GET">
-        <input type="submit">
+        <input type="submit" value="Select">
     </form>
 
     <p><a href="{{ url_for('get_all_worlds') }}">All Worlds</a></p>
