--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -6,5 +6,7 @@
     <p><a href="{{ url_for('get_single_creator', num=creator[0])}}"><h3>ID #{{ creator[0] }}: {{ creator[1] }}</h3></a></p>
     <p>Role: {{ creator[4] }}</p>
 
+    <img src="{{ creator[4] }}" alt="Creator Image" width="33%" height="33%">
+
     <p><a href="{{ url_for('get_all_creators') }}">All Creators</a></p>
 {% endblock %}
