--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -18,6 +18,9 @@
     <p>URL: {{ objective[6] }}</p>
     <p>Supported by: {{ objective[7] }}</p>
     <p>Requires: {{ objective[8] }}</p>
+
+    <img src="{{ objective[9] }}" alt="Objective Image" width="33%" height="33%">
+
     <p>
         <form action="{{ url_for('get_single_quest', num=objective[0])}}">
             <input type="submit" value="Edit Quest" />
