--- a/templates/person_detail.html
+++ b/templates/person_detail.html
@@ -15,5 +15,7 @@
     <p><i>Found in <a href="{{ url_for('get_single_room', num=person[1])}}">Room ID #{{ person[1] }}</a></i></p>
     <p>Description: {{ person[4] }}</p>
 
+    <img src="{{ person[5] }}" alt="Person Image" width="33%" height="33%">
+
     <p><a href="{{ url_for('get_all_persons', num=person[2]) }}">All Persons</a></p>
 {% endblock %}
