--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -15,5 +15,7 @@
     <p><i>Found in <a href="{{ url_for('get_single_world', num=room[1])}}">World ID #{{ room[1] }}</a></i></p>
     <p>Description: {{ room[3] }}</p>
 
+    <img src="{{ room[4] }}" alt="Room Image" width="33%" height="33%">
+
     <p><a href="{{ url_for('get_all_rooms', num=room[1]) }}">All Rooms</a></p>
 {% endblock %}
