--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <h1>{% block title %} Index {% endblock %}</h1>
-    <h3>Welcome</h3>
+    <h3>Welcome to Kringle Web</h3>
     <a href="/wetty/ssh/game?pass=game">Start game</a>
 {% endblock %}
