--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -1,12 +1,13 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} Single Creator {% endblock %}</h1>
+    <h2>{% block title %} {{ creator[1] }} (#{{ creator[0] }}) {% endblock %}</h2>
 
-    <p><a href="{{ url_for('get_single_creator', num=creator[0])}}"><h3>ID #{{ creator[0] }}: {{ creator[1] }}</h3></a></p>
-    <p>Role: {{ creator[3] }}</p>
+    <p>
+        Role: {{ creator[3] }}
+    </p>
 
-    <img src="{{ creator[4] if (creator[4]!='') else '/static/notfound.png' }}" alt="Creator Image" width="33%" height="33%">
+    <img src="{{ creator[4] if (creator[4]!='') else '/static/not_found.jpg' }}" alt="Creator Image" width="33%" height="33%">
 
     <p><a href="{{ url_for('get_all_creators') }}">All Creators</a></p>
 {% endblock %}
