--- a/templates/creator_new.html
+++ b/templates/creator_new.html
@@ -1,9 +1,9 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} New Creator {% endblock %}</h1>
+    <h2>{% block title %} New Creator {% endblock %}</h2>
 
-    <h5>Create a new creator:</h5>
+    <h4>Please enter data:</h4>
     <form action="{{ url_for('post_new_creator') }}" method="POST">
         Name: <input type="text" name="creator" size="20" maxlength="20" minlength="5"><br>
         Password: <input type="password" name="password" size="20" maxlength="20" minlength="5"><br>
