--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} Index {% endblock %}</h1>
-    <h3>Welcome to Kringle Web</h3>
-    <a href="/wetty/ssh/game?pass=game">Start game</a>
+    <h2>{% block title %} Index {% endblock %}</h2>
+    <h4>Welcome to </h4>
+    
+    <img src="/static/kringle_logo.jpg" alt="Kringle Logo" width="50%" height="50%">
 {% endblock %}
