--- a/templates/item.html
+++ b/templates/item.html
@@ -9,11 +9,15 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{% block title %} All Items {% endblock %}</h1>
+    <h2>{% block title %} All Items {% endblock %}</h2>
 
-    {% for item in items %}
-        <p><a href="{{ url_for('get_single_item', num=item[0])}}"><h3>ID #{{ item[0] }}: {{ item[3] }}</h3></a></p>
-    {% endfor %}
+    <p>
+        <ul>
+            {% for item in items %}
+            <li><a href="{{ url_for('get_single_item', num=item[0])}}">{{ item[3] }} (#{{ item[0] }})</a></li>
+            {% endfor %}
+        </ul>
+    </p>
 
     <a href="{{ url_for('get_my_index') }}">Index</a>
 {% endblock %}
