--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -9,13 +9,14 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{% block title %} Single Item {% endblock %}</h1>
+    <h2>{% block title %} {{ item[3] }} (#{{ item[0] }}) {% endblock %}</h2>
 
-    <p><a href="{{ url_for('get_single_item', num=item[0])}}"><h3>ID #{{ item[0] }}: {{ item[3] }}</h3></a></p>
-    <p><i>Found in <a href="{{ url_for('get_single_room', num=item[1])}}">Room ID #{{ item[1] }}</a></i></p>
-    <p>Description: {{ item[4] }}</p>
+    <p>
+        <i>Found in <a href="{{ url_for('get_single_room', num=item[1])}}">Room ID #{{ item[1] }}</a></i></br>
+        Description: {{ item[4] }}
+    </p>
 
-    <img src="{{ item[5] if (item[5]!='') else '/static/notfound.png' }}" alt="Item Image" width="33%" height="33%">
+    <img src="{{ item[5] if (item[5]!='') else '/static/not_found.jpg' }}" alt="Item Image" width="33%" height="33%">
 
     <p><a href="{{ url_for('get_all_items', num=item[2]) }}">All Items</a></p>
 {% endblock %}
