--- a/templates/junction_detail.html
+++ b/templates/junction_detail.html
@@ -9,12 +9,13 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{% block title %} Single Junction {% endblock %}</h1>
+    <h2>{% block title %} #{{ junction[0] }} {% endblock %}</h2>
     
-    <p><a href="{{ url_for('get_single_junction', num=junction[0])}}"><h3>ID #{{ junction[0] }}</h3></a></p>
-    <p><i>Found in <a href="{{ url_for('get_single_room', num=junction[1])}}">Room ID #{{ junction[1] }}</a></i></p>
-    <p><i>Targeting <a href="{{ url_for('get_single_room', num=junction[3])}}">Room ID #{{ junction[3] }}</a></i></p>
-    <p>Description: {{ junction[4] }}</p>
+    <p>
+        <i>Found in <a href="{{ url_for('get_single_room', num=junction[1])}}">Room ID #{{ junction[1] }}</a></i></br>
+        <i>Targeting <a href="{{ url_for('get_single_room', num=junction[3])}}">Room ID #{{ junction[3] }}</a></i></br>
+        Description: {{ junction[4] }}
+    </p>
 
     <p><a href="{{ url_for('get_all_junctions', num=junction[2]) }}">All Junctions</a></p>
 {% endblock %}
