--- a/templates/person_detail.html
+++ b/templates/person_detail.html
@@ -9,13 +9,14 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{% block title %} Single Person {% endblock %}</h1>
+    <h1>{% block title %} {{ person[3] }} (#{{ person[0] }}) {% endblock %}</h1>
     
-    <p><a href="{{ url_for('get_single_person', num=person[0])}}"><h3>ID #{{ person[0] }}: {{ person[3] }}</h3></a></p>
-    <p><i>Found in <a href="{{ url_for('get_single_room', num=person[1])}}">Room ID #{{ person[1] }}</a></i></p>
-    <p>Description: {{ person[4] }}</p>
+    <p>
+        <i>Found in <a href="{{ url_for('get_single_room', num=person[1])}}">Room ID #{{ person[1] }}</a></i></br>
+        Description: {{ person[4] }}
+    </p>
 
-    <img src="{{ person[5] if (person[5]!='') else '/static/notfound.png' }}" alt="Person Image" width="33%" height="33%">
+    <img src="{{ person[5] if (person[5]!='') else '/static/not_found.jpg' }}" alt="Person Image" width="33%" height="33%">
 
     <p><a href="{{ url_for('get_all_persons', num=person[2]) }}">All Persons</a></p>
 {% endblock %}
