--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -1,14 +1,15 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h1>{% block title %} Single World {% endblock %}</h1>
+    <h2>{% block title %} {{ world[2] }} (#{{ world[0] }}) {% endblock %}</h2>
 
-    <p><a href="{{ url_for('get_single_world', num=world[0])}}"><h3>ID #{{ world[0] }}: {{ world[2] }}</h3></a></p>
-    <p><i>Created by <a href="{{ url_for('get_single_creator', num=world[1])}}">Creator ID #{{ world[1] }}</a></i></p>
-    <p>Description: {{ world[3] }}</p>
-    <p>URL: {{ world[4] }}</p>
+    <p>
+        <i>Created by <a href="{{ url_for('get_single_creator', num=world[1])}}">Creator #{{ world[1] }}</a></i></br>
+        Description: {{ world[3] }}</br>
+        URL: {{ world[4] }}
+    </p>
 
-    <img src="{{ world[5] if (world[5]!='') else '/static/notfound.png' }}" alt="World Image" width="33%" height="33%">
+    <img src="{{ world[5] if (world[5]!='') else '/static/not_found.jpg' }}" alt="World Image" width="33%" height="33%">
 
     <form action="{{ url_for('get_all_rooms', num=world[0]) }}" method="GET">
         <input type="submit" value="Select">
